manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: "/etc/grafana/provisioning/datasources/datasources.yaml"
          subPath: datasources.yaml
        - name: dashboards
          mountPath: "/var/lib/grafana/dashboards/default/"
        - name: config
          mountPath: "/etc/grafana/provisioning/dashboards/dashboardproviders.yaml"
          subPath: dashboardproviders.yaml
        ports:
        - containerPort: 3000
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 60
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
      volumes:
      - name: config
        configMap:
          name: grafana
      - name: dashboards
        configMap:
          name: dashboards
---
apiVersion: v1
kind: Service
metadata:
  name: gafana
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: grafana 
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`grafana.bender.sway.org`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: gafana
      port: 3000
    middlewares:
    - name: redirect

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: securegrafana
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana.bender.sway.org`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: gafana
      port: 3000
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
